--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -26,6 +26,9 @@
             ],
             "styles": [
               "src/styles.css",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeflex/primeflex.css",
               {
                 "input": "src/app/core/services/theme/saga-blue.css",
                 "bundleName": "saga-blue",
@@ -94,7 +97,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeflex/primeflex.css"
             ],
             "scripts": []
           }
